<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item_0"
        android:title="@string/txtNotificao"
        android:icon="@drawable/ic_menu_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_1"
        android:title="@string/txtEmprestimo"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_2"
        android:title="@string/txtFinanciamento"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_3"
        android:title="@string/txtInvestimento"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_4"
        android:title="@string/txtSeguro"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_5"
        android:title="@string/txtConsorcio"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_6"
        android:title="@string/txtCobrar"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_7"
        android:title="@string/txtComprovantes"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_8"
        android:title="@string/txtSair_do_app"
        app:showAsAction="ifRoom"/>
</menu>